--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         }
     ],
     "require": {
-        "php" : "^7.0"
+        "php" : "^7.0",
+        "illuminate/support": "~5.1.0|~5.2.0|~5.3.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^3.2",
+        "orchestra/testbench": "3.3.x-dev",
+        "orchestra/database": "3.3.x-dev",
         "phpunit/phpunit": "^5.0"
     },
     "autoload": {
