--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,10 @@
     ],
     "require": {
         "php" : "^7.0",
-        "illuminate/support": "~5.1.0|~5.2.0|~5.3.0"
+        "illuminate/support": "~5.1.0|~5.2.0|~5.3.0|~5.4.0"
     },
     "require-dev": {
-        "orchestra/testbench": "3.3.x-dev",
-        "orchestra/database": "3.3.x-dev",
+        "orchestra/testbench": "~3.3.0|~3.4.0",
         "phpunit/phpunit": "^5.0"
     },
     "autoload": {
