Support Auto-Discovery

--- a/composer.json
+++ b/composer.json
@@ -35,5 +35,12 @@
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Spatie\\DemoMode\\DemoModeServiceProvider"
+            ]
+        }
     }
 }
