--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     ],
     "require": {
         "php" : "^7.0",
-        "illuminate/support": "~5.1.0|~5.2.0|~5.3.0|~5.4.0"
+        "illuminate/support": "5.5.x-dev"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.3.0|~3.4.0",
-        "phpunit/phpunit": "^5.0"
+        "orchestra/testbench": "3.5.x-dev",
+        "phpunit/phpunit": "^6.3"
     },
     "autoload": {
         "psr-4": {
@@ -42,5 +42,7 @@
                 "Spatie\\DemoMode\\DemoModeServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
