--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     ],
     "require": {
         "php" : "^7.2",
-        "illuminate/support": "~5.5.5|~5.6.0|~5.7.0|~5.8.0|^6.0"
+        "illuminate/support": "^6.0|^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "~3.5.3|~3.6.0|~3.7.0|~3.8.0|^4.0",
-        "phpunit/phpunit": "^8.0"
+        "orchestra/testbench": "~3.8.0|^4.0|^5.0",
+        "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
@@ -42,5 +42,7 @@
                 "Spatie\\DemoMode\\DemoModeServiceProvider"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
