--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     ],
     "require": {
         "php" : "^7.2",
-        "illuminate/support": "5.8.*|^6.0|^7.0"
+        "illuminate/support": "^7.0"
     },
     "require-dev": {
-        "orchestra/testbench": "3.8.*|^4.0|^5.0",
-        "phpunit/phpunit": "^8.0|^9.0"
+        "orchestra/testbench": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "autoload": {
         "psr-4": {
