--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,11 @@
     ],
     "require": {
         "php" : "^7.2",
-        "illuminate/support": "^7.0"
+        "illuminate/support": "^7.0",
+        "laravel/framework": "^7.0",
+        "orchestra/testbench": "^5.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
         "phpunit/phpunit": "^8.0|^9.0"
     },
     "autoload": {
