--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,7 +9,7 @@ jobs:
             fail-fast: true
             matrix:
                 os: [ubuntu-latest, windows-latest]
-                php: [8.0, 7.4, 7.3, 7.2]
+                php: [8.0, 7.4]
                 laravel: [7.*, 8.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 include:
@@ -17,9 +17,6 @@ jobs:
                       testbench: 6.*
                     - laravel: 7.*
                       testbench: 5.*
-                exclude:
-                    - laravel: 8.*
-                      php: 7.2
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
