--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         }
     ],
     "require": {
-        "php" : "^7.4|^8.0",
-        "illuminate/support": "^7.0|^8.0"
+        "php" : "^8.0.2|^8.1",
+        "illuminate/support": "^9.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0|^6.0",
+        "orchestra/testbench": "^7.1",
         "phpunit/phpunit": "^9.3"
     },
     "autoload": {
