--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -10,11 +10,16 @@ jobs:
             matrix:
                 os: [ubuntu-latest, windows-latest]
                 php: [8.0.2, 8.1]
-                laravel: [9.*]
+                laravel: [9.*, 10.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 include:
+                    - laravel: 10.*
+                      testbench: 8.*
                     - laravel: 9.*
                       testbench: 7.*
+                exclude:
+                    - laravel: 10.*
+                      php: 8.0.2             
 
         name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
