--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
     ],
     "require": {
         "php": "^8.0.2|^8.1",
-        "illuminate/support": "^9.0|^10.0"
+        "illuminate/support": "^9.0|^10.0|^11.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^7.1|^8.0",
-        "phpunit/phpunit": "^9.3"
+        "orchestra/testbench": "^7.1|^8.0|^9.0",
+        "phpunit/phpunit": "^9.3|^10.5"
     },
     "autoload": {
         "psr-4": {
